# PositionalCache

./: .gitignore  CMakeLists.txt  readme.txt
benchmarks/: Benchmark_Cluster.cpp  Benchmark_QTree.cpp  Benchmark_VaryingEntityCounts.cpp  Benchmark_VaryingSelectionSizes.cpp  CMakeLists.txt
src/: Area2D.cpp  Area2D.h  Bounds.cpp  Bounds.h  CMakeLists.txt  Cache.h  CacheEntity.cpp  CacheEntity.h  EngineEntity.cpp  EngineEntity.h  Entity.h  EntityCache.cpp  EntityCache.h  EntityHandle.cpp  EntityHandle.h  EntityView.cpp  EntityView.h  Error.h  Main.cpp  PositionalCache_CMake.cpp  PositionalCache_CMake.h  SafeEntityHandle.cpp  SafeEntityHandle.h  SafeEntityView.cpp  SafeEntityView.h  Timer.cpp  Timer.h  World.cpp  World.h  WorldEntity.cpp  WorldEntity.h  main.cpp
src/Framework/: Bounds.cpp  Bounds.h  Cache.h  Entity.h  EntityHandle.h  EntityView.h  Point2D.cpp  Point2D.h
src/Framework/Algorithms/: BasicAlgorithm.h  DequeAlgorithm.h  GridAlgorithm.h  QuadtreeAlgorithm.h  StaticQuadtreeAlgorithm.h  VectorAlgorithm.cpp  VectorAlgorithm.h
src/FrameworkUser/: Button.cpp  Button.h  Main.cpp  World.cpp  World.h  WorldEntity.cpp  WorldEntity.h
